--- a/05.react_crud/package.json
+++ b/05.react_crud/package.json
@@ -2,6 +2,7 @@
   "name": "05.react_crud",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/NS0H/goorm_mission/05.react_crud",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
